<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/res" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/buttons">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/row1"
            android:weightSum="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b7"
                android:id="@+id/b7"
                android:layout_weight="0.10" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b8"
                android:id="@+id/b8"
                android:layout_weight="0.10" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b9"
                android:id="@+id/b9"
                android:layout_weight="0.10" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bdiv"
                android:id="@+id/bdiv"
                android:layout_weight="0.10" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/row2"
            android:weightSum="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b4"
                android:id="@+id/b4"
                android:layout_weight="0.10" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b5"
                android:id="@+id/b5"
                android:layout_weight="0.10" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b6"
                android:id="@+id/b6"
                android:layout_weight="0.10" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmul"
                android:id="@+id/bmul"
                android:layout_weight="0.10" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/row3"
            android:weightSum="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b1"
                android:id="@+id/b1"
                android:layout_weight="0.10" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b2"
                android:id="@+id/b2"
                android:layout_weight="0.10" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b3"
                android:id="@+id/b3"
                android:layout_weight="0.10" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/bsum"
                android:id="@+id/bsum"
                android:layout_weight="0.10" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/row4"
            android:weightSum="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bp"
                android:id="@+id/bp"
                android:layout_weight="0.10" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b0"
                android:id="@+id/b0"
                android:layout_weight="0.10" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beq"
                android:id="@+id/beq"
                android:layout_weight="0.10" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bres"
                android:id="@+id/bres"
                android:layout_weight="0.10" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>